// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Destroy User OTP Controller Snapshot Test for expired otp. 1`] = `
{
  "body": {
    "message": "OTP expired, generate new OTP.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Destroy User OTP Controller Snapshot Test for inactive user. 1`] = `
{
  "body": {
    "message": "Your account is blocked, you can't delete it.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Destroy User OTP Controller Snapshot Test for invalid otp. 1`] = `
{
  "body": {
    "message": "Invalid, please enter correct OTP.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Destroy User OTP Controller Snapshot Test for otp missing. 1`] = `
{
  "body": {
    "message": "Please fill OTP correctly.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Destroy User OTP Controller Snapshot Test for server error. 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while deleting user data.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Destroy User OTP Controller Snapshot Test for successful delete. 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullname": undefined,
      "userId": "123",
      "username": "testUser",
    },
    "message": "User data deleted successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Destroy User OTP Controller Snapshot Test for user not found. 1`] = `
{
  "body": {
    "message": "Invalid request, account not found.",
    "success": false,
  },
  "status": 404,
}
`;
